# Vectorstore

./: .env  .gitignore  README.md  pyproject.toml
data/knowledge_base/chroma_db/: chroma.sqlite3
src/: embedding_manager.py  knowledge_base.py
src/server/: fastapi_server.py  mcp_server.py
tests/: test_20250824_1849.txt  test_embedding_system.py  test_runner.py
